
Changes
=======

0.4.0
--------

- removed dependency on jQuery


0.3.0 (*2014-06-23*)
-----------------------

- added hoe.Component
- added hoe.UI

0.2.0 (*2013-01-27*)
------------------------

- added hoe.partial
- added hoe.Type.map
- added hoe.Type.scope
- rename hoe.Type.on to hoe.Type.listen
- rename hoe.Type.trigger to hoe.Type.fire


